# EasyMusik

./: .gitignore  1stGnossienne_EricSatie.json  BohemianRhapsody_Queen.txt  CMakeLists.txt  CMakeLists.txt.TdQlKl  Cancion.cpp  Cancion.h  FinDialog.cpp  FinDialog.h  FinDialog.ui  MainWindow.cpp  MainWindow.h  MenuPrincipal.cpp  MenuPrincipal.h  MusicXMLConverter.py  PausaDialog.cpp  PausaDialog.h  PausaDialog.ui  Tecla.cpp  Tecla.h  TeclaCayendo.cpp  TeclaCayendo.h  Teclado.cpp  Teclado.h  VentanaCarga.cpp  VentanaCarga.h  audiveris_direct.bat  basededatos.cpp  basededatos.h  canciones.db  duracionNota.cpp  duracionNota.h  fix_imports.py  jsondeprueba.json  lectorJSON.cpp  lectorJSON.h  main.cpp  main_Converter_ejemplo.py  mainwindow.cpp  mainwindow.h  (+5 more)
.qtcreator/: project.json.qtds
Audiveris/app/: Audiveris.cfg
AudiverisMusic21/: MusicXMLConverter.py  mainEjemplo.py  pianoPygame.py  transformarPDF_JSON.py
AudiverisMusic21/partiturasJSON/: 1stGnossienne_EricSatie.json  1stGnossienne_EricSatie.txt  Giselle_AdolpheCharlesAdam.json  Giselle_AdolpheCharlesAdam.txt  NeverMeantToBelong_Bleach.json  NeverMeantToBelong_Bleach.txt
AudiverisMusic21/partiturasMXL/: 1stGnossienne_EricSatie.mxl  Giselle_AdolpheCharlesAdam.mxl
partituras/: 1stGnossienne_EricSatie.json  1stGnossienne_EricSatie.txt  BohemianRhapsody_Queen.json  BohemianRhapsody_Queen.mxl  BohemianRhapsody_Queen.txt  Despacito_LuisFonsi.json  Despacito_LuisFonsi.txt  Formula1Theme_BrianTyler.json  Formula1Theme_BrianTyler.txt  Giselle_AdolpheCharlesAdam.json  Giselle_AdolpheCharlesAdam.txt  HimnoDeEspaña.json  HimnoEspanya.json  HimnoEspanya.txt  NeverMeantToBelong_Bleach.json  NeverMeantToBelong_Bleach.mxl  NeverMeantToBelong_Bleach.txt  SoundscapeToArdor_ShiroSagisu.json  SoundscapeToArdor_ShiroSagisu.mxl  SoundscapeToArdor_ShiroSagisu.txt  StarWars.json  StarWars.txt  cumpleanyosFeliz - copia.json  cumpleanyosFeliz.json  partituras - Acceso directo.lnk  prueba.json
partituraspdf/: 1stGnossienne_EricSatie.omr
sounds old/: aa.bat  vbfvb.ps1
